--- a/public/assets/css/misestilos.css
+++ b/public/assets/css/misestilos.css
@@ -1,6 +1,6 @@
 .carda{
    box-shadow: 2px 2px 3px darkslateblue;
-  
+   background-color: rgba(0, 0, 0, 0.479);
 }
 
 body{
@@ -15,4 +15,44 @@ body{
 .inicio{
    color: wheat;
    font-family: fantasy;
+}
+
+.texto{
+   border: solid 3px rgba(102, 51, 153, 0.651);
+   border-radius: 10px;
+   background-color: rgba(222, 184, 135, 0.356);
+}
+
+.texto h2{
+   text-transform: uppercase;
+   text-align: center;
+   text-size-adjust: 30px;
+   letter-spacing: 2px;
+   color: rgba(139, 0, 139, 0.678);
+   font-family: Verdana, Geneva, Tahoma, sans-serif;
+   margin-top: 10px;
+}
+
+.texto p{
+   color: rgba(139, 0, 139, 0.678);
+   font-family: Georgia, 'Times New Roman', Times, serif;
+   letter-spacing: 2px;
+   margin-top: 10px;
+}
+
+.ancla:hover{
+   color: white;
+}
+
+.inicio:hover{
+   color: white;
+}
+
+.border{
+   border-radius: 10px;
+}
+
+.h{
+   color: rebeccapurple;
+   font-family: cursive;
 }
